--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -25,13 +25,6 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # - name: Run tests
-      #   run: npm test
-
-      # - name: Verify test results
-      #   if: failure()
-      #   run: echo "Tests failed. Build failed."
-
       - name: build the app
         run: npm run build
 
@@ -61,7 +54,7 @@ jobs:
         run: |
           export CLOUDFRONT_DISTRIBUTION_ID=$(cat $TF_OUTPUT_FILE | jq -r '.cloudfront_distribution_id.value')
           echo $CLOUDFRONT_DISTRIBUTION_ID
-          aws s3 sync build/ s3://skybound-dev --exclude "*.DS_Store"
+          aws s3 sync build/ s3://resume-site --exclude "*.DS_Store" # this should really come from the tf output
           aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths '/*' 
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
