--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -53,8 +53,10 @@ jobs:
       - name: Sync build files to S3
         run: |
           export CLOUDFRONT_DISTRIBUTION_ID=$(cat $TF_OUTPUT_FILE | jq -r '.cloudfront_distribution_id.value')
-          echo $CLOUDFRONT_DISTRIBUTION_ID
-          aws s3 sync build/ s3://resume-site --exclude "*.DS_Store" # this should really come from the tf output
+          export BUCKET_NAME=$(cat $TF_OUTPUT_FILE | jq -r '.bucket_name.value')
+          echo "CloudFront Distribution ID: $CLOUDFRONT_DISTRIBUTION_ID"
+          echo "S3 Bucket Name: $BUCKET_NAME"
+          aws s3 sync build/ s3://$BUCKET_NAME --exclude "*.DS_Store"
           aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths '/*' 
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
